--- a/_toc.yml
+++ b/_toc.yml
@@ -58,28 +58,26 @@ parts:
       title: Strings en lussen
     - file: exercises/codingbat_strings 
       title: CodingBat Strings
-#- caption: Week 3
-#  chapters:
-#  - file: course/week_3
-#    title: Onderwerpen
-#    sections:
-#    - file: topics/3b_arrays_en_referenties
-#      title: Arrays en referenties
-#    - file: topics/4b_immutable_objecten
-#      title: Immutabiliteit
-#    - file: topics/5a_mutable_klassen_en_objecten
-#      title: Mutable klassen en objecten
-#  - file: exercises/multiplication/index
-#    title: Practicum
-#  - file: problems/profiler/index
-#    title: Opgave
-#  - file: course/ex_3
-#    title: Oefening
-#    sections:
-#    - file: exercises/codingbat_arrays
-#      title: CodingBat arrays
-#    - file: exercises/grote_getallen
-#      title: Grote getallen
+- caption: Week 3
+  chapters:
+  - file: course/week_3
+    title: Onderwerpen
+    sections:
+    - file: topics/4b_immutable_objecten
+      title: Immutabiliteit
+    - file: topics/5a_mutable_klassen_en_objecten
+      title: Mutable klassen en objecten
+  - file: exercises/multiplication/index
+    title: Practicum
+  - file: course/ex_3
+    title: Opgave
+    sections:
+    - file: exercises/grote_getallen
+      title: Grote getallen
+    - file: problems/profiler/index
+      title: Strings en Lussen
+    - file: exercises/codingbat_arrays
+      title: CodingBat arrays
 #
 #- caption: Week 4
 #  chapters:
