--- a/_toc.yml
+++ b/_toc.yml
@@ -67,6 +67,8 @@ parts:
       title: Immutabiliteit
     - file: topics/5a_mutable_klassen_en_objecten
       title: Mutable klassen en objecten
+  - file: exercises/objecten_maken_met_point.md
+    title: Opgaven
 #  - file: exercises/multiplication/index
 #    title: Practicum
 #  - file: course/ex_3
