--- a/_toc.yml
+++ b/_toc.yml
@@ -67,8 +67,14 @@ parts:
       title: Immutabiliteit
     - file: topics/5a_mutable_klassen_en_objecten
       title: Mutable klassen en objecten
-  - file: exercises/objecten_maken_met_point.md
-    title: Opgaven
+  - file: exercises/objecten_maken_met_point
+    title: Practicum
+  - file: course/ex_3
+    sections:
+    - file: problems/opgave-OptionalInt
+      title: De klasse `OptionalInt`
+    - file: problems/opgave-LocalDate
+      title: De klasse `LocalDate`
 #  - file: exercises/multiplication/index
 #    title: Practicum
 #  - file: course/ex_3
