--- a/.github/workflows/deploy_book.yml
+++ b/.github/workflows/deploy_book.yml
@@ -26,7 +26,9 @@ jobs:
       uses: actions/setup-python@v2
       with:
         python-version: "3.10.x"
-    - name: Install dependencies
+    - name: Install system dependencies
+      run: sudo apt-get install -y libxml2-dev libxslt-dev
+    - name: Install Pyhton dependencies
       run: |
         sudo pip install -r requirements.txt
     - name: Install IJava
