--- a/.github/workflows/deploy_book.yml
+++ b/.github/workflows/deploy_book.yml
@@ -28,7 +28,7 @@ jobs:
         python-version: "3.10.x"
     - name: Install system dependencies
       run: sudo apt-get install -y libxml2-dev libxslt-dev
-    - name: Install Pyhton dependencies
+    - name: Install Python dependencies
       run: |
         sudo pip install -r requirements.txt
     - name: Install IJava
