--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ cffi==1.15.1
 charset-normalizer==2.1.1
 click==8.1.3
 colorama==0.4.5
+cython==3.0.11
 debugpy==1.6.3
 decorator==5.1.1
 defusedxml==0.7.1
@@ -77,8 +78,8 @@ pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.2.1
-PyYAML==6.0
-pyzmq==23.2.1
+PyYAML==6.0.2
+pyzmq==26.2.0
 requests==2.28.1
 Send2Trash==1.8.0
 six==1.16.0
