--- a/requirements.txt
+++ b/requirements.txt
@@ -111,7 +111,7 @@ tinycss2==1.1.1
 tornado==6.2
 traitlets==5.3.0
 uc-micro-py==1.0.1
-urllib3==1.26.12
+#urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.4.0
