--- a/.github/workflows/deploy_book.yml
+++ b/.github/workflows/deploy_book.yml
@@ -30,7 +30,7 @@ jobs:
       run: sudo apt-get install -y libxml2-dev libxslt-dev
     - name: Install Python dependencies
       run: |
-        sudo pip install -r requirements.txt
+        sudo pip install --ignore-installed -r requirements.txt
     - name: Install IJava
       run: |
         sudo ./scripts/install_ijava.sh
